--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html>
 
-<!-- Link to javascript game.js -->
-<script type="text/javascript" src="assets/javascript/game.js"></script>
-
 <head>
-	<title>Tuna's Psychic Game</title>
+	<title>Tony's Psychic Game</title>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,34 +10,41 @@
     <meta name="description" content="Psychic Game">
     <meta name="author" content="Anthony Tran-Son-Tay">
 
-	<!-- set up style sheets -->
-	<!-- reset not needed because using bootstrap -->
-	<!-- <link rel="stylesheet" type="text/css" href="/assets/css/reset.css"> -->
-	<!-- Link in locally stored min version of bootstrap.css -->
-	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
-	<!-- Make final css adjustments with personal stylesheet -->
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<!-- Reset.css -->
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+	<!-- Bootstrap.css -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">">
+	<!-- Style.css -->
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <!-- JQuery.css-->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <!-- Link to javascript game.js -->
+	<script type="text/javascript" src="assets/javascript/game.js"></script>
+	<!--Audio srcs-->
+	<audio id="cackle" src="assets/SoundFX/Cackle.mp3" preload="auto"></audio>
+	<audio id="mario" src="assets/SoundFX/Hooray.mp3" preload="auto"></audio>
 </head>
 
 <body>
 	<!-- This is what will be displayed on screen to begin -->
-	<div class="jumbotron">
+	<div class="jumbotron d-flex align-items-center">
 			<div class="row">
 				<div class="col-md-1"></div>
 				<div class="col-md-6">
-					<img src="assets/images/psychic.jpg" class="img-responsive" alt="psychic">
+					<img src="assets/images/curse.jpeg" class="img-responsive" alt="psychic">
 				</div>
 				<div class="col-md-5"></div>
 			</div>
 			<div class="row">
 				<div class="col-md-1"></div>
 				<div class="col-md-6" id="game">
-					<p><h1>The Psychic Game</h1></p>
-					<p><h4>Guess what letter I'm thinking of</h4></p>
+					<p><h1>The Psychic Gypsy Game</h1></p>
+					<p><h4>Guess What Letter I'm Thinking Of:</h4></p>
 					<p><h4>Wins: 0</h4></p>
 					<p><h4>Losses: 0</h4></p>
-					<p><h4>Guesses Left: 9</h4></p>
-					<p><h4>Your guesses so far: </h4></p>
+					<p><h4>Guesses Left: 7</h4></p>
+					<p><h4>Your Guesses So Far: </h4></p>
+					<br>
 				</div>
 				<div class="col-md-5"></div>
 			</div>
